--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,16 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+    <button routerLink="/" class="btn btn-link">На Главную</button>
+  </div>
+  <div class="info">
+    <strong>Тут автор</strong>
+    <small>12.12.21</small>
+  </div>
+  <div>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consequuntur eius eveniet illum iure iusto minus mollitia necessitatibus nesciunt saepe. Ea non perspiciatis voluptatibus. Aliquam architecto delectus eos eum eveniet excepturi explicabo ipsa iste laudantium magni maxime molestiae non omnis placeat quae quas quasi, quidem quisquam quod reprehenderit saepe vero.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consequuntur eius eveniet illum iure iusto minus mollitia necessitatibus nesciunt saepe. Ea non perspiciatis voluptatibus. Aliquam architecto delectus eos eum eveniet excepturi explicabo ipsa iste laudantium magni maxime molestiae non omnis placeat quae quas quasi, quidem quisquam quod reprehenderit saepe vero.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consequuntur eius eveniet illum iure iusto minus mollitia necessitatibus nesciunt saepe. Ea non perspiciatis voluptatibus. Aliquam architecto delectus eos eum eveniet excepturi explicabo ipsa iste laudantium magni maxime molestiae non omnis placeat quae quas quasi, quidem quisquam quod reprehenderit saepe vero.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur consequuntur eius eveniet illum iure iusto minus mollitia necessitatibus nesciunt saepe. Ea non perspiciatis voluptatibus. Aliquam architecto delectus eos eum eveniet excepturi explicabo ipsa iste laudantium magni maxime molestiae non omnis placeat quae quas quasi, quidem quisquam quod reprehenderit saepe vero.
+  </div>
+</div>
