--- a/src/app/shared/components/post/post.component.html
+++ b/src/app/shared/components/post/post.component.html
@@ -1,1 +1,11 @@
-<p>post works!</p>
+<div class="card">
+  <div class="card-header">
+    <h2>Post title</h2>
+    <small>12.12.21</small>
+  </div>
+  <div>
+    <small>KOSIMBEK</small>
+  </div>
+  <button [routerLink]="['post', 2312]" class="btn btn-dark">Открыть</button>
+
+</div>
